@@ -71,37 +71,130 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
-		   <plugin>
-          <groupId>org.codehaus.cargo</groupId>
-          <artifactId>cargo-maven2-plugin</artifactId>
-          <version>1.5.0</version>
-          <configuration>
-           <container>
-    <containerId>tomcat8x</containerId>
-    <type>remote</type>
-  </container>
-  <configuration>       
-	  <home>${project.build.directory}/catalina-base</home>
-	  <type>runtime</type>
-    <properties>
-      <cargo.remote.username>admin</cargo.remote.username>
-      <cargo.remote.password></cargo.remote.password>
-      <cargo.tomcat.manager.url>http://http://40.70.14.67:8081/manager</cargo.tomcat.manager.url>
-    </properties>
-  </configuration>
-            <deployables>
-              <deployable>
-                <groupId>${project.groupId}</groupId>
-                <artifactId>${project.artifactId}</artifactId>
-                <type>war</type>
-                <properties>
-                  <!-- set the context for your web app so the correct configuration is applied -->
-                  <context>/dev</context>
-                </properties>
-              </deployable>
-            </deployables>
-          </configuration>
-        </plugin>
+		
+
+
+<plugin>
+
+ 
+<groupId>org.codehaus.cargo</groupId>
+
+ 
+<artifactId>cargo-maven2-plugin</artifactId>
+
+ 
+<version>1.5.0</version>
+
+ 
+<configuration>
+
+ 
+<container>
+
+ 
+<!-- https://codehaus-cargo.github.io/cargo/Maven2+Plugin+Reference+Guide.html#Maven2PluginReferenceGuide-container -->
+
+ 
+<containerId>tomcat8x</containerId>
+
+ 
+<zipUrlInstaller>
+
+ 
+<url>http://repo1.maven.org/maven2/org/apache/tomcat/tomcat/8.0.35/tomcat-8.0.35.zip</url>
+
+ 
+</zipUrlInstaller>
+
+ 
+<!-- Instead of downloading the container, you can also reuse an existing installation by settings its directory:
+
+ 
+<home>/Users/horsti/files/tomcats/apache-tomcat-8.5.4</home> -->
+
+ 
+<output>${project.build.directory}/tomcat8x/container.log</output> 
+
+ <home>${project.build.directory}/catalina-base</home>
+<!-- If true, then the file specified by <output> will not be erased across different runs -->
+
+ 
+<append>false</append>
+
+ 
+<!-- set this value if your web app is taking some time to start -->
+
+ 
+<!--timeout>360000</timeout-->
+
+ 
+</container>
+
+ 
+<configuration>
+
+ 
+<type>standalone</type>
+
+ 
+<home>${project.build.directory}/tomcat8x</home>
+
+ 
+<properties>
+
+ 
+<cargo.servlet.port>8081</cargo.servlet.port>
+
+ 
+<cargo.logging>high</cargo.logging>
+
+ 
+<cargo.jvmargs>-XX:MaxPermSize=512m -Xms256m -Xmx3072m -Xdebug -Xnoagent -Xrunjdwp:transport=dt_socket,server=y,suspend=n,address=5005 -XX:+DisableExplicitGC -Xverify:none -Djava.awt.headless=true</cargo.jvmargs>
+
+ 
+</properties>
+
+ 
+</configuration>
+
+ 
+<deployables>
+
+ 
+<deployable>
+
+ 
+<groupId>${project.groupId}</groupId>
+
+ 
+<artifactId>${project.artifactId}</artifactId>
+
+ 
+<type>war</type>
+
+ 
+<properties>
+
+ 
+<!-- set the context for your web app so the correct configuration is applied -->
+
+ 
+<context>/dev</context>
+
+ 
+</properties>
+
+ 
+</deployable>
+
+ 
+</deployables>
+
+ 
+</configuration>
+
+ 
+</plugin>
            </plugins>
      </build>
 
